boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_preamble.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: output
---
import { WireReader, WireWriter, BoltFFIModule, instantiateBoltFFI, wireStringSize } from "@boltffi/runtime";
import type { WireCodec } from "@boltffi/runtime";

const EXPECTED_ABI_VERSION = 1;

let _module: BoltFFIModule;

export default async function init(source: BufferSource | Response): Promise<void> {
  _module = await instantiateBoltFFI(source, EXPECTED_ABI_VERSION);
}
