boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_record_with_string_field.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
/**
 * A user record
 */
export interface User {
  readonly id: number;
  /**
   * The user's display name
   */
  readonly name: string;
}

const UserCodec: WireCodec<User> = {
  size: (v) => 4 + wireStringSize(v.name),
  encode: (writer, v) => {
    writer.writeI32(v.id);
    writer.writeString(v.name);
  },
  decode: (reader) => ({
    id: reader.readI32(),
    name: reader.readString(),
  }),
};
